--- a/ex08/fabio_mazza/Aula_8_Exercício_Template.ipynb
+++ b/ex08/fabio_mazza/Aula_8_Exercício_Template.ipynb
@@ -3115,10 +3115,10 @@
       ],
       "metadata": {
         "id": "jOdQB41_4ZxG",
-        "outputId": "c4b11a16-d138-4932-b692-e6db8b11cbdc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c4b11a16-d138-4932-b692-e6db8b11cbdc"
       },
       "execution_count": 2,
       "outputs": [
@@ -3172,10 +3172,10 @@
       ],
       "metadata": {
         "id": "3twP0YJC4jmJ",
-        "outputId": "c8f5e56c-4f50-472a-f85f-58c817fa145f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8f5e56c-4f50-472a-f85f-58c817fa145f"
       },
       "execution_count": 3,
       "outputs": [
@@ -3258,10 +3258,10 @@
       ],
       "metadata": {
         "id": "w9f3PfifAwpU",
-        "outputId": "3cbfdd22-cc9a-4724-dacd-50cae744513b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3cbfdd22-cc9a-4724-dacd-50cae744513b"
       },
       "execution_count": 5,
       "outputs": [
@@ -3305,10 +3305,10 @@
       ],
       "metadata": {
         "id": "whTCe2i7AtoV",
-        "outputId": "27062e16-3146-4ea7-8bf8-ce987259dd95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "27062e16-3146-4ea7-8bf8-ce987259dd95"
       },
       "execution_count": 6,
       "outputs": [
@@ -3407,7 +3407,6 @@
       ],
       "metadata": {
         "id": "8r7jBFFUeApe",
-        "outputId": "36e025b8-4350-4d4b-a8f4-3619260909bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313,
@@ -3479,7 +3478,8 @@
             "bac91e4e0ac2426596055377a15fa05f",
             "405e05a7ee7f432999cef2048e402020"
           ]
-        }
+        },
+        "outputId": "36e025b8-4350-4d4b-a8f4-3619260909bf"
       },
       "execution_count": 8,
       "outputs": [
@@ -3612,10 +3612,10 @@
       ],
       "metadata": {
         "id": "vGlN1WqrXPA6",
-        "outputId": "731c5a13-62a5-405a-87eb-ccf7968339e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "731c5a13-62a5-405a-87eb-ccf7968339e8"
       },
       "execution_count": 9,
       "outputs": [
@@ -3661,7 +3661,6 @@
       ],
       "metadata": {
         "id": "gxa_4gmiA-wE",
-        "outputId": "563686eb-3648-470f-8cb4-54fefe5afbf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 182,
@@ -3700,7 +3699,8 @@
             "e35b137f223e48cb9a1d80715b1d8d0b",
             "1dcec5e9095741ddaaf1115ed1f04cea"
           ]
-        }
+        },
+        "outputId": "563686eb-3648-470f-8cb4-54fefe5afbf2"
       },
       "execution_count": 10,
       "outputs": [
@@ -3773,10 +3773,10 @@
       ],
       "metadata": {
         "id": "KCSGJ5m7py4c",
-        "outputId": "c5f4a630-75ce-4221-c2f7-8930e76c0425",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c5f4a630-75ce-4221-c2f7-8930e76c0425"
       },
       "execution_count": 11,
       "outputs": [
@@ -3808,6 +3808,9 @@
         "            context_size (int): Size of the sequence to consider as context for prediction.\n",
         "            embedding_dim (int): Dimension of the embedding layer for each word in the context.\n",
         "        \"\"\"\n",
+        "\n",
+        "        super(LanguageModel, self).__init__()\n",
+        "        \n",
         "        self.V = vocab_size\n",
         "        self.L = context_size\n",
         "        self.D = embedding_dim\n",
@@ -3816,7 +3819,7 @@
         "        n_linear_2 = 512\n",
         "        \n",
         "        self.embedding_matrix = torch.nn.Embedding(vocab_size, embedding_dim)\n",
-        "        self.positional_encoding = torch.zeros([context_size, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
+        "        self.positional = torch.zeros([context_size, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
         "        self.wq = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
         "        self.wk = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
         "        self.wv = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
@@ -3834,12 +3837,31 @@
         "        Returns:\n",
         "            logits of shape (batch_size, vocab_size)\n",
         "        \"\"\"\n",
-        "        \n",
+        "        X = self.embedding_matrix(inputs)\n",
+        "        print('X shape:', X.shape)\n",
+        "        X = X + self.positional\n",
+        "        print('X shape:', X.shape)\n",
+        "        Q = torch.matmul(X[-1], self.wq)\n",
+        "        print('Q shape:', Q.shape)\n",
+        "        K = torch.matmul(X, self.wk)\n",
+        "        print('K shape:', K.shape)\n",
+        "        V = torch.matmul(X, self.wv)\n",
+        "        print('V shape:', V.shape)\n",
+        "        scores = torch.matmul(Q, K.t)\n",
+        "        print('Scores shape:', scores.shape)\n",
+        "        probs = torch.nn.Softmax(scores, dim=-1)\n",
+        "        print('probs shape:', probs.shape)\n",
+        "        E = torch.matmul(probs, V)\n",
+        "        print('E shape:', E.shape)\n",
+        "        E = torch.matmul(E, self.wo)\n",
+        "        print('E shape:', E.shape)\n",
+        "        out = self.linear_1(E)\n",
+        "        out = self.linear_out(out)\n",
+        "        print('out shape:', out)\n",
         "\n",
-        "        \n",
-        "        return"
+        "        return out"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -3854,7 +3876,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RwnxfZlrZoT_"
+        "id": "RwnxfZlrZoT_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 380
+        },
+        "outputId": "75d493ab-8971-4dd7-d022-46886cb49804"
       },
       "source": [
         "model = LanguageModel(\n",
@@ -3867,8 +3894,22 @@
         "sample_train_gpu = sample_train.to(device)\n",
         "model(sample_train_gpu).shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-e126d16bc524>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mvocab_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mcontext_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcontext_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0membedding_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m ).to(device)\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-14-0d846a27b17c>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, vocab_size, context_size, embedding_dim)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mn_linear_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m512\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedding_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpositional\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcontext_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequires_grad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0membedding_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequires_grad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m   1213\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mmodules\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1214\u001b[0m                     raise AttributeError(\n\u001b[0;32m-> 1215\u001b[0;31m                         \"cannot assign module before Module.__init__() call\")\n\u001b[0m\u001b[1;32m   1216\u001b[0m                 \u001b[0mremove_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_non_persistent_buffers_set\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1217\u001b[0m                 \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: cannot assign module before Module.__init__() call"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
