--- a/ex08/fabio_mazza/Aula_8_Exercício_Template.ipynb
+++ b/ex08/fabio_mazza/Aula_8_Exercício_Template.ipynb
@@ -3810,7 +3810,7 @@
         "        \"\"\"\n",
         "\n",
         "        super(LanguageModel, self).__init__()\n",
-        "        \n",
+        "\n",
         "        self.V = vocab_size\n",
         "        self.L = context_size\n",
         "        self.D = embedding_dim\n",
@@ -3818,16 +3818,16 @@
         "        n_linear_1 = 128\n",
         "        n_linear_2 = 512\n",
         "        \n",
-        "        self.embedding_matrix = torch.nn.Embedding(vocab_size, embedding_dim)\n",
-        "        self.positional = torch.zeros([context_size, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
-        "        self.wq = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
-        "        self.wk = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
-        "        self.wv = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
-        "        self.wo = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True)\n",
+        "        self.embedding_matrix = torch.nn.Embedding(vocab_size, embedding_dim, device=device)\n",
+        "        self.positional = torch.zeros([context_size, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wq = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wk = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wv = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wo = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
         "\n",
         "\n",
-        "        self.linear_1 = torch.nn.Linear(embedding_dim, n_linear_2)\n",
-        "        self.linear_out = torch.nn.Linear(n_linear_2, vocab_size)\n",
+        "        self.linear_1 = torch.nn.Linear(embedding_dim, n_linear_2, device=device)\n",
+        "        self.linear_out = torch.nn.Linear(n_linear_2, vocab_size, device=device)\n",
         "\n",
         "    def forward(self, inputs):\n",
         "        \"\"\"\n",
@@ -3837,6 +3837,8 @@
         "        Returns:\n",
         "            logits of shape (batch_size, vocab_size)\n",
         "        \"\"\"\n",
+        "        print(f'V:{self.V}, L:{self.L}, D:{self.D}')\n",
+        "\n",
         "        X = self.embedding_matrix(inputs)\n",
         "        print('X shape:', X.shape)\n",
         "        X = X + self.positional\n",
@@ -3847,9 +3849,9 @@
         "        print('K shape:', K.shape)\n",
         "        V = torch.matmul(X, self.wv)\n",
         "        print('V shape:', V.shape)\n",
-        "        scores = torch.matmul(Q, K.t)\n",
+        "        scores = torch.matmul(Q, K.permute(0, 2, 1))\n",
         "        print('Scores shape:', scores.shape)\n",
-        "        probs = torch.nn.Softmax(scores, dim=-1)\n",
+        "        probs = torch.nn.functional.softmax(scores, dim=-1)\n",
         "        print('probs shape:', probs.shape)\n",
         "        E = torch.matmul(probs, V)\n",
         "        print('E shape:', E.shape)\n",
@@ -3857,11 +3859,13 @@
         "        print('E shape:', E.shape)\n",
         "        out = self.linear_1(E)\n",
         "        out = self.linear_out(out)\n",
-        "        print('out shape:', out)\n",
+        "        print('out shape:', out.shape)\n",
+        "        T = 4.0 #temperature\n",
+        "        out = out/T\n",
         "\n",
         "        return out"
       ],
-      "execution_count": 14,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -3878,10 +3882,9 @@
       "metadata": {
         "id": "RwnxfZlrZoT_",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 380
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75d493ab-8971-4dd7-d022-46886cb49804"
+        "outputId": "ab4b5d43-4fe5-49e4-e89b-71de8d5ea585"
       },
       "source": [
         "model = LanguageModel(\n",
@@ -3894,34 +3897,60 @@
         "sample_train_gpu = sample_train.to(device)\n",
         "model(sample_train_gpu).shape"
       ],
-      "execution_count": 15,
+      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-e126d16bc524>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mvocab_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mcontext_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcontext_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0membedding_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m ).to(device)\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-14-0d846a27b17c>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, vocab_size, context_size, embedding_dim)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mn_linear_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m512\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedding_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpositional\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcontext_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequires_grad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0membedding_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequires_grad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m   1213\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mmodules\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1214\u001b[0m                     raise AttributeError(\n\u001b[0;32m-> 1215\u001b[0;31m                         \"cannot assign module before Module.__init__() call\")\n\u001b[0m\u001b[1;32m   1216\u001b[0m                 \u001b[0mremove_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_non_persistent_buffers_set\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1217\u001b[0m                 \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: cannot assign module before Module.__init__() call"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "V:29794, L:9, D:64\n",
+            "X shape: torch.Size([1, 9, 64])\n",
+            "X shape: torch.Size([1, 9, 64])\n",
+            "Q shape: torch.Size([9, 64])\n",
+            "K shape: torch.Size([1, 9, 64])\n",
+            "V shape: torch.Size([1, 9, 64])\n",
+            "Scores shape: torch.Size([1, 9, 9])\n",
+            "probs shape: torch.Size([1, 9, 9])\n",
+            "E shape: torch.Size([1, 9, 64])\n",
+            "E shape: torch.Size([1, 9, 64])\n",
+            "out shape: torch.Size([1, 9, 29794])\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 9, 29794])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I3Vh6B-VkA01"
+        "id": "I3Vh6B-VkA01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e3eeaf6d-4927-470e-c083-95c15a777d1b"
       },
       "source": [
         "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "print(f'Number of model parameters: {num_params}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of model parameters: 17224418\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3971,10 +4000,46 @@
         "print('Passou o no assert da perplexidade')"
       ],
       "metadata": {
-        "id": "gbMP8VAUncfX"
+        "id": "gbMP8VAUncfX",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 692
+        },
+        "outputId": "54fe59e5-9910-4d45-92f7-36bfab98ebd4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "V:29794, L:9, D:64\n",
+            "X shape: torch.Size([1000, 9, 64])\n",
+            "X shape: torch.Size([1000, 9, 64])\n",
+            "Q shape: torch.Size([9, 64])\n",
+            "K shape: torch.Size([1000, 9, 64])\n",
+            "V shape: torch.Size([1000, 9, 64])\n",
+            "Scores shape: torch.Size([1000, 9, 9])\n",
+            "probs shape: torch.Size([1000, 9, 9])\n",
+            "E shape: torch.Size([1000, 9, 64])\n",
+            "E shape: torch.Size([1000, 9, 64])\n",
+            "out shape: torch.Size([1000, 9, 29794])\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-41-64cb1e6d8369>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_train_gpu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mmy_perplexity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperplexity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_token_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'my perplexity:              {int(my_perplexity)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-41-64cb1e6d8369>\u001b[0m in \u001b[0;36mperplexity\u001b[0;34m(logits, target)\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mA\u001b[0m \u001b[0mfloat\u001b[0m \u001b[0mcorresponding\u001b[0m \u001b[0mto\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mperplexity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \"\"\"\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctional\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   2994\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msize_average\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mreduce\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2995\u001b[0m         \u001b[0mreduction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_get_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize_average\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2996\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_smoothing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2997\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2998\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Expected target size [1000, 29794], got [1000]"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
